[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/tools/graph_panels/terminal_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/primitives/debug_gui.gd" type="Script" id=2]
[ext_resource path="res://scenes/tools/GraphTheme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/tools/graph_panels/icons/cross.png" type="Texture" id=4]
[ext_resource path="res://scenes/tools/graph_panels/icons/downRight.png" type="Texture" id=5]
[ext_resource path="res://scenes/shadys_elements/box.png" type="Texture" id=6]
[ext_resource path="res://scenes/tools/tree_view.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/NotoSansUI_Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/tools/data_explorer.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0.25098, 0.0196078, 0.333333 )
draw_center = true
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.00392157, 0.494118, 0, 1 )
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0.25098, 0.0196078, 0.219608 )
draw_center = true
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.00392157, 0.494118, 0, 1 )
border_blend = true
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="DynamicFont" id=3]

size = 11
outline_size = 0
outline_color = Color( 0.226332, 0.835938, 0.0783691, 1 )
use_mipmaps = false
use_filter = true
font_data = ExtResource( 8 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="window" type="VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 135.0
margin_bottom = 85.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
alignment = 0
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags", "Theme", "Visibility", "custom_constants", "custom_icons" ]

[node name="title" type="PanelContainer" parent="." index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 134.0
margin_bottom = 26.0
grow_horizontal = 2
rect_min_size = Vector2( 100, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "Theme", "Visibility", "custom_fonts", "custom_styles", "custom_styles/panel" ]
fade_time = 0.25

[node name="tween" type="Tween" parent="title" index="0"]
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="title" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 133.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="close_button" type="TextureRect" parent="title/HBoxContainer" index="0"]
self_modulate = Color( 0.235294, 1, 0.0235294, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
texture = ExtResource( 4 )
stretch_mode = 3
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "Visibility" ]

[node name="text" type="Label" parent="title/HBoxContainer" index="1"]
modulate = Color( 0.854902, 1, 0.156863, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_right = 108.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "Base Window "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="resize_button" type="TextureRect" parent="title/HBoxContainer" index="2"]
visible = false
self_modulate = Color( 0.235294, 1, 0.0235294, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 112.0
margin_right = 132.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
texture = ExtResource( 5 )
stretch_mode = 3
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "Visibility" ]

[node name="button_overlay" type="NinePatchRect" parent="title" index="2"]
visible = false
modulate = Color( 0.635294, 1, 0.545098, 1 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 133.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
_sections_unfolded = [ "Axis Stretch", "Mouse", "Patch Margin", "Rect", "Visibility" ]

[node name="frame" type="PanelContainer" parent="." index="1"]
light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 134.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
_sections_unfolded = [ "Animation", "Axis Stretch", "Offset", "Patch Margin", "Rect", "Region", "Theme", "Transform", "Visibility", "custom_styles", "custom_styles/panel", "theme" ]

[node name="views" type="TabContainer" parent="frame" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 133.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 2 )
tab_align = 1
tabs_visible = false
drag_to_rearrange_enabled = false
_sections_unfolded = [ "custom_styles" ]

[node name="tree" parent="frame/views" index="0" instance=ExtResource( 7 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 3 )
columns = 2
select_mode = 2
script = ExtResource( 9 )
_sections_unfolded = [ "Anchor", "Custom Colors", "Custom Constants", "Custom Fonts", "Custom Icons", "Custom Styles", "Focus", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "custom_colors", "custom_fonts/font", "custom_styles", "custom_styles/bg" ]

[node name="title2" type="PanelContainer" parent="." index="2"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 82.0
margin_right = 134.0
margin_bottom = 108.0
grow_horizontal = 2
rect_min_size = Vector2( 100, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "Theme", "Visibility", "custom_fonts", "custom_styles", "custom_styles/panel" ]
fade_time = 0.25

[node name="tween" type="Tween" parent="title2" index="0"]
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="title2" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 133.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="close_button" type="TextureRect" parent="title2/HBoxContainer" index="0"]
self_modulate = Color( 0.235294, 1, 0.0235294, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
texture = ExtResource( 4 )
stretch_mode = 3
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "Visibility" ]

[node name="text" type="Label" parent="title2/HBoxContainer" index="1"]
modulate = Color( 0.854902, 1, 0.156863, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_right = 108.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "Base Window "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="resize_button" type="TextureRect" parent="title2/HBoxContainer" index="2"]
visible = false
self_modulate = Color( 0.235294, 1, 0.0235294, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 112.0
margin_right = 132.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
texture = ExtResource( 5 )
stretch_mode = 3
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "Visibility" ]

[node name="button_overlay" type="NinePatchRect" parent="title2" index="2"]
visible = false
modulate = Color( 0.635294, 1, 0.545098, 1 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 159.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
_sections_unfolded = [ "Axis Stretch", "Mouse", "Patch Margin", "Rect", "Visibility" ]

[connection signal="gui_input" from="title" to="title" method="_on_drag_bar_gui_input"]
[connection signal="tween_completed" from="title/tween" to="title" method="_on_tween_completed"]
[connection signal="gui_input" from="title/HBoxContainer/close_button" to="title" method="_on_close_button_gui_input"]
[connection signal="gui_input" from="title/HBoxContainer/resize_button" to="title" method="_on_resize_button_gui_input"]
[connection signal="gui_input" from="title2" to="title2" method="_on_drag_bar_gui_input"]
[connection signal="tween_completed" from="title2/tween" to="title2" method="_on_tween_completed"]
[connection signal="gui_input" from="title2/HBoxContainer/close_button" to="title2" method="_on_close_button_gui_input"]
[connection signal="gui_input" from="title2/HBoxContainer/resize_button" to="title2" method="_on_resize_button_gui_input"]
